# engine_2d

./: CROSS_PLATFORM.md  Cargo.toml  README.md  dependencies.txt  game_engine_requirements.txt  phases.txt  project structure.txt
examples/: advanced_window_demo.rs  basic_renderer.rs  basic_sprite.rs  basic_window.rs  complete_input_demo.rs  custom_animations.rs  input_system_demo.rs  input_test.rs  math_utilities.rs  pendulum_animation.rs  physics_demo.rs  simple_text_demo.rs  simple_text_showcase.rs  sprite_movement_demo.rs  text_rendering_demo.rs
src/: lib.rs  main.rs
src/animation/: animation.rs  mod.rs
src/audio/: audio_manager.rs  sound.rs
src/ecs/: component.rs  entity.rs  mod.rs  system.rs  world.rs
src/engine/: config.rs  core.rs  mod.rs  window.rs
src/events/: event_system.rs  event_types.rs  mod.rs  system_trait.rs
src/input/: actions.rs  gamepad.rs  keyboard.rs  macros.rs  manager.rs  mod.rs  mouse.rs  types.rs
src/physics/: collision.rs  mod.rs  rigidbody.rs
src/render/: gl_service.rs  gl_wrapper.rs  mod.rs  render_service.rs  renderer.rs  shader.rs  simple_text.rs  simple_text_new.rs  sprite.rs  text.rs  text_utils.rs  texture.rs  viewport.rs
src/render/shaders/: basic.vert  sprite.frag  sprite.vert  text.frag  text.vert
src/scene/: mod.rs  scene.rs  scene_manager.rs
src/utils/: math.rs  mod.rs  resource.rs
tests/: config_tests.rs  input_system_tests.rs  math_utils_tests.rs
