[package]
name = "engine_2d"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cross-platform terminal input
crossterm = "0.27"

# Cross-platform window management and OpenGL context creation (optional)
glfw = { version = "0.60", optional = true }

# Cross-platform OpenGL bindings (optional)
gl = { version = "0.14", optional = true }

# Cross-platform math library
glam = "0.25"

# Cross-platform image loading
image = "0.24"

# Serialization support
serde = { version = "1.0", features = ["derive"] }

# Logging framework
log = "0.4"
env_logger = "0.10"

# Cross-platform audio (optional)
# rodio = "0.17"

[features]
default = ["window"]
gl = ["dep:gl"]
glfw = ["dep:glfw"]
window = ["gl", "glfw"]

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies (if needed)
# winapi = "0.3"

[target.'cfg(unix)'.dependencies]
# Unix-specific dependencies (if needed)
# x11 = "2.21"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies (if needed)
# cocoa = "0.25"
