[package]
name = "engine_2d"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cross-platform terminal input
crossterm = "0.27"

# Cross-platform window management and OpenGL context creation
glfw = { version = "0.60", optional = true }

# Cross-platform OpenGL bindings
gl = { version = "0.14", optional = true }

# Cross-platform math library
glam = "0.25"

# Cross-platform image loading
image = { version = "0.24", optional = true }

# Serialization support
serde = { version = "1.0", features = ["derive"] }

# Logging framework
log = "0.4"
env_logger = "0.10"

# Cross-platform audio (optional)
# rodio = "0.17"
paste = "1.0"

[features]
default = []
opengl = ["glfw", "gl", "image"]

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies (if needed)
# winapi = "0.3"

[target.'cfg(unix)'.dependencies]
# Unix-specific dependencies (if needed)
# x11 = "2.21"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies (if needed)
# cocoa = "0.25"

[[example]]
name = "basic_window"
required-features = ["opengl"]

[[example]]
name = "basic_renderer"
required-features = ["opengl"]

[[example]]
name = "basic_sprite"
required-features = ["opengl"]

[[example]]
name = "custom_animations"
required-features = ["opengl"]

[[example]]
name = "pendulum_animation"
required-features = ["opengl"]
